Agregue el encio de correos con emailsj

--- a/index.html
+++ b/index.html
@@ -716,6 +716,11 @@
     </a>
 
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script>
+      emailjs.init("TPxpHC9h5XWIp6nvk"); // Reemplaza con la clave
+    </script>
+
     <script src="js/scripts.js"></script>
   </body>
 </html>
