mejoras y egregaciones menores

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     <!-- Carrusel de promociones personalizado -->
     <div class="carousel-custom" id="carouselPromo">
       <div class="carousel-track">
-        <!-- Copia tus cards aquí -->
+        <!-- Copia  cards aquí -->
         <div class="carousel-item">
           <div class="card h-100 promotion-card" data-id="101">
             <span
@@ -649,29 +649,23 @@
           <!-- Contacto -->
           <div class="col-md-4 mb-4 text-center">
             <h5 class="text-uppercase mb-3">Contáctanos</h5>
-            <p><i class="bi bi-geo-alt"></i> Sahagun, Córdoba</p>
+            <p><i class="bi bi-geo-alt"></i> Sahagún, Córdoba</p>
             <p><i class="bi bi-telephone"></i> +57 300 123 4567</p>
-            <p><i class="bi bi-envelope"></i> contacto@plantasyraices.com</p>
+            <p><i class="bi bi-envelope"></i> info@plantasyraices.com</p>
           </div>
 
           <!-- Enlaces -->
           <div class="col-md-4 mb-4 text-center">
             <h5 class="text-uppercase mb-3">Enlaces</h5>
             <ul class="list-unstyled">
-              <li>
-                <a href="index.html" class="footer-link">Catalogo</a>
-              </li>
-              <li>
-                <a href="consejos.html" class="footer-link">Consejos</a>
-              </li>
+              <li><a href="index.html" class="footer-link">Catálogo</a></li>
+              <li><a href="consejos.html" class="footer-link">Consejos</a></li>
               <li>
                 <a href="sobreNosotros.html" class="footer-link"
                   >Sobre nosotros</a
                 >
               </li>
-              <li>
-                <a href="contacto.html" class="footer-link">Contácto</a>
-              </li>
+              <li><a href="contacto.html" class="footer-link">Contácto</a></li>
             </ul>
           </div>
 
@@ -697,7 +691,24 @@
             </ul>
           </div>
         </div>
-        <!-- Cierre de .row -->
+        <!-- Fin de row -->
+
+        <!-- Métodos de pago -->
+        <div class="row justify-content-center my-3">
+          <div class="col-12 text-center">
+            <h6 class="text-uppercase mb-3">Métodos de pago</h6>
+            <div class="d-flex justify-content-center gap-3 flex-wrap">
+              <img src="img/aVisa.png" alt="Visa" style="height: 40px" />
+              <img
+                src="img/aMastercard.png"
+                alt="MasterCard"
+                style="height: 40px"
+              />
+              <img src="img/pse-logo.png" alt="PSE" style="height: 40px" />
+              <img src="img/aNequi.png" alt="Nequi" style="height: 40px" />
+            </div>
+          </div>
+        </div>
 
         <hr class="border-top border-white opacity-50" />
 
@@ -707,7 +718,6 @@
           </p>
         </div>
       </div>
-      <!-- Cierre de .container -->
     </footer>
 
     <!-- Botón de WhatsApp -->
