--- a/consejos.html
+++ b/consejos.html
@@ -326,7 +326,7 @@
     </div>
 
     <!-- Contenido principal -->
-    <main class="container py-4">
+    <main class="container-fluid px-3 px-md-4 px-lg-5 py-4">
       <section>
         <h2 class="fs-2 mb-4">Consejos para un jardín saludable</h2>
         <p>
@@ -335,7 +335,7 @@
           específicas, pero con un buen cuidado general tu jardín prosperará.
         </p>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-12 col-sm-6 col-lg-4">
             <div class="card mb-4">
               <img
                 src="img/cuidado de plantas.webp"
@@ -358,7 +358,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+
+          <div class="col-12 col-sm-6 col-lg-4">
             <div class="card mb-4">
               <img
                 src="img/Riego de plantas.webp"
@@ -381,7 +382,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+
+          <div class="col-12 col-sm-6 col-lg-4">
             <div class="card mb-4">
               <img
                 src="img/Fertilizacioni.webp"
@@ -621,29 +623,23 @@
           <!-- Contacto -->
           <div class="col-md-4 mb-4 text-center">
             <h5 class="text-uppercase mb-3">Contáctanos</h5>
-            <p><i class="bi bi-geo-alt"></i> Sahagun, Córdoba</p>
+            <p><i class="bi bi-geo-alt"></i> Sahagún, Córdoba</p>
             <p><i class="bi bi-telephone"></i> +57 300 123 4567</p>
-            <p><i class="bi bi-envelope"></i> contacto@plantasyraices.com</p>
+            <p><i class="bi bi-envelope"></i> info@plantasyraices.com</p>
           </div>
 
           <!-- Enlaces -->
           <div class="col-md-4 mb-4 text-center">
             <h5 class="text-uppercase mb-3">Enlaces</h5>
             <ul class="list-unstyled">
-              <li>
-                <a href="index.html" class="footer-link">Catalogo</a>
-              </li>
-              <li>
-                <a href="consejos.html" class="footer-link">Consejos</a>
-              </li>
+              <li><a href="index.html" class="footer-link">Catálogo</a></li>
+              <li><a href="consejos.html" class="footer-link">Consejos</a></li>
               <li>
                 <a href="sobreNosotros.html" class="footer-link"
                   >Sobre nosotros</a
                 >
               </li>
-              <li>
-                <a href="contacto.html" class="footer-link">Contácto</a>
-              </li>
+              <li><a href="contacto.html" class="footer-link">Contácto</a></li>
             </ul>
           </div>
 
@@ -669,7 +665,24 @@
             </ul>
           </div>
         </div>
-        <!-- Cierre de .row -->
+        <!-- Fin de row -->
+
+        <!-- Métodos de pago -->
+        <div class="row justify-content-center my-3">
+          <div class="col-12 text-center">
+            <h6 class="text-uppercase mb-3">Métodos de pago</h6>
+            <div class="d-flex justify-content-center gap-3 flex-wrap">
+              <img src="img/aVisa.png" alt="Visa" style="height: 40px" />
+              <img
+                src="img/aMastercard.png"
+                alt="MasterCard"
+                style="height: 40px"
+              />
+              <img src="img/pse-logo.png" alt="PSE" style="height: 40px" />
+              <img src="img/aNequi.png" alt="Nequi" style="height: 40px" />
+            </div>
+          </div>
+        </div>
 
         <hr class="border-top border-white opacity-50" />
 
@@ -679,7 +692,6 @@
           </p>
         </div>
       </div>
-      <!-- Cierre de .container -->
     </footer>
 
     <!-- Botón de WhatsApp -->
