--- a/contacto.html
+++ b/contacto.html
@@ -339,42 +339,70 @@
 
     <!-- Contenido principal -->
     <div class="container my-5">
-      <div class="formulario-bg">
-        <h2 class="text-center mb-4">Contáctanos</h2>
+      <div class="row g-4">
+        <!-- Formulario: 2/3 en escritorio, 100% en móvil -->
+        <div class="col-12 col-lg-8 d-flex">
+          <div class="formulario-bg p-4 flex-fill">
+            <h2 class="text-center mb-4">Contáctanos</h2>
+            <form>
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="nombre"
+                  placeholder="Tu nombre completo"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="correo" class="form-label"
+                  >Correo Electrónico</label
+                >
+                <input
+                  type="email"
+                  class="form-control"
+                  id="correo"
+                  placeholder="tucorreo@ejemplo.com"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="mensaje" class="form-label">Mensaje</label>
+                <textarea
+                  class="form-control"
+                  id="mensaje"
+                  rows="5"
+                  placeholder="Escribe tu mensaje aquí"
+                  required
+                ></textarea>
+              </div>
+              <button type="submit" class="btn btn-success">
+                Enviar mensaje
+              </button>
+            </form>
+          </div>
+        </div>
 
-        <form>
-          <div class="mb-3">
-            <label for="nombre" class="form-label">Nombre</label>
-            <input
-              type="text"
-              class="form-control"
-              id="nombre"
-              placeholder="Tu nombre completo"
-              required
-            />
+        <!-- Info contacto: 1/3 en escritorio, 100% en móvil -->
+        <div class="col-12 col-lg-4 d-flex">
+          <div
+            <div
+            class="p-4 border rounded flex-fill d-flex flex-column justify-content-center"
+            style="background-color: #198754; color: white"
+          >
+            <h4>Información de contacto</h4>
+            <p><strong>Teléfono:</strong> +57 300 123 4567</p>
+            <p><strong>Correo:</strong> contacto@plantasyraices.com</p>
+            <p>
+              <strong>Horario de atención:</strong><br />Lunes a Viernes<br />8:00
+              a.m. - 6:00 p.m.
+            </p>
+            <p>
+              <strong>Dirección:</strong><br />Calle 123 #45-67, Sahagun-Cordoba
+            </p>
           </div>
-          <div class="mb-3">
-            <label for="correo" class="form-label">Correo Electrónico</label>
-            <input
-              type="email"
-              class="form-control"
-              id="correo"
-              placeholder="tucorreo@ejemplo.com"
-              required
-            />
-          </div>
-          <div class="mb-3">
-            <label for="mensaje" class="form-label">Mensaje</label>
-            <textarea
-              class="form-control"
-              id="mensaje"
-              rows="5"
-              placeholder="Escribe tu mensaje aquí"
-              required
-            ></textarea>
-          </div>
-          <button type="submit" class="btn btn-success">Enviar mensaje</button>
-        </form>
+        </div>
       </div>
     </div>
 
@@ -393,29 +421,23 @@
           <!-- Contacto -->
           <div class="col-md-4 mb-4 text-center">
             <h5 class="text-uppercase mb-3">Contáctanos</h5>
-            <p><i class="bi bi-geo-alt"></i> Sahagun, Córdoba</p>
+            <p><i class="bi bi-geo-alt"></i> Sahagún, Córdoba</p>
             <p><i class="bi bi-telephone"></i> +57 300 123 4567</p>
-            <p><i class="bi bi-envelope"></i> contacto@plantasyraices.com</p>
+            <p><i class="bi bi-envelope"></i> info@plantasyraices.com</p>
           </div>
 
           <!-- Enlaces -->
           <div class="col-md-4 mb-4 text-center">
             <h5 class="text-uppercase mb-3">Enlaces</h5>
             <ul class="list-unstyled">
-              <li>
-                <a href="index.html" class="footer-link">Catalogo</a>
-              </li>
-              <li>
-                <a href="consejos.html" class="footer-link">Consejos</a>
-              </li>
+              <li><a href="index.html" class="footer-link">Catálogo</a></li>
+              <li><a href="consejos.html" class="footer-link">Consejos</a></li>
               <li>
                 <a href="sobreNosotros.html" class="footer-link"
                   >Sobre nosotros</a
                 >
               </li>
-              <li>
-                <a href="contacto.html" class="footer-link">Contácto</a>
-              </li>
+              <li><a href="contacto.html" class="footer-link">Contácto</a></li>
             </ul>
           </div>
 
@@ -441,7 +463,24 @@
             </ul>
           </div>
         </div>
-        <!-- Cierre de .row -->
+        <!-- Fin de row -->
+
+        <!-- Métodos de pago -->
+        <div class="row justify-content-center my-3">
+          <div class="col-12 text-center">
+            <h6 class="text-uppercase mb-3">Métodos de pago</h6>
+            <div class="d-flex justify-content-center gap-3 flex-wrap">
+              <img src="img/aVisa.png" alt="Visa" style="height: 40px" />
+              <img
+                src="img/aMastercard.png"
+                alt="MasterCard"
+                style="height: 40px"
+              />
+              <img src="img/pse-logo.png" alt="PSE" style="height: 40px" />
+              <img src="img/aNequi.png" alt="Nequi" style="height: 40px" />
+            </div>
+          </div>
+        </div>
 
         <hr class="border-top border-white opacity-50" />
 
@@ -451,7 +490,6 @@
           </p>
         </div>
       </div>
-      <!-- Cierre de .container -->
     </footer>
 
     <!-- Botón de WhatsApp -->
